--- a/style.css
+++ b/style.css
@@ -1,31 +1,68 @@
 * {
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+}
+
+p {
+  font-size: .8rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+}
+
+span {
+  padding-left: 50px;
+  font-weight: 900;
+}
+
+a {
+  text-align: center;
+}
+
+i {
+  color: #9CA3AE;
+  font-size: 1.1rem;
 }
 
 .container {
-  border: 1px solid black;
   display: grid;
   grid-template-columns: 170px 1fr;
   grid-template-areas: 
     "sidebar main-content";
+  /*height: 1500px;*/
 }
 
 .sidebar {
   grid-area: sidebar;
   background-color: #374050;
-  height: 150vh;
+  /*height: 100%;*/
 }
 
 .main-content {
   display: grid;
-  grid-template-rows: 5% 15% 80%;
+  grid-template-rows: 60px 10% 90%;
   grid-area: main-content;
   background-color: white;
-  height: 150vh;
+  /*height: 100%;*/
 }
 
 .nav {
-  border: 1px solid gray;
+  border: 1px solid #EBECEF;
+  background-color: #F0F1F4;
+  grid-gap: 2px;
+  display: grid;
+  grid-template-columns: 60px 1fr repeat(3, 60px);                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  ikl,0px);
+}
+
+.btn {
+  background-color: white;
+  border: none;
+  margin: 0;
+}
+
+.btn:hover {
+  background-color: #48A3F3;
 }
 
 .header {
@@ -34,8 +71,68 @@
 .main-inside {
   background-color: #EEF2F6;
   display: grid;
-  grid-template-rows: 30% 1px 70%;
+  grid-template-rows: 30% 70%;
 }
+
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.top-section {
+display: grid;
+padding: 10px 30px;
+}
+
+.graphs {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /*height: 250px;*/
+}                                                         
+
+.graph-btn {
+  width: auto;
+  border-radius: 25px;
+  padding: 10px;
+}
+
+.divider {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.center-hr {
+  width: 47.5%;
+  border: none;
+  height: 2px;
+  background-color: #6d799342;
+  margin: 0;
+}
+
+.fa-angle-up {
+  color: #A4AAB5;
+  background-color: white;
+  border: 1.5px solid #6d799342;
+  border-radius: 50%;
+  font-size: 1rem;
+  width: 33px;
+  height: 33px;
+  text-align: center;
+  padding: 6px;
+
+}
+
+.fa-chevron-circle-up {
+  border: 1.5px solid #6d79930a;
+  border-radius: 50%;
+  background-color: #6d799342;
+  color: white;
+  font-size: 1.2rem;
+}
+
 
 .bottom-section {
   display: grid;
@@ -46,33 +143,101 @@
 
 .job-posting {
   background-color: white;
+  display: grid;
+  grid-template-rows: 10% 90%;
 }
 
-.social-side {
+.job-header {
+  background-color: #727E93;
+  border-radius: 3px 3px 0 0;
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.job-body {
+
+}
+
+.job-text {
+  padding: 20px;
+}
+
+.social-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.social-hr {
+  width: 90%;
+  align-self: flex-end;
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.social-inputs {
   display: flex;
   flex-direction: column;
 }
 
-.fa {
-  padding: 15px;
-  font-size: 30px;
-  text-align: center;
-  text-decoration: none;
-  margin: 7px 2px;
+.text-field {
+  width: 76%;
 }
 
-.fa-facebook {
-  background: #3B5998;
+.text-field-last {
+  width: 100%
+}
+
+.input {
+  height: 45px;
+}
+
+.copy-btn {
+  background-color: #67B8BF;
+  color: white;
+  padding: 15px;
+  border: none;
+  height: 45px;
+}
+
+input {
+  border: none;
+  line-height: 0;
+  font-size: 1rem;
+  padding: 0;
+}
+
+.fab {
+  padding: 15px;
+  text-decoration: none;
+  margin: 0 2px 15px;
+  text-align: left;
+  border-radius: 3px;
+}
+
+.fa-facebook-f {
+  background: #5070BB;
   color: white;
 }
 
 .fa-twitter {
-  background: #55ACEE;
+  background: #48A9E9;
   color: white;
 }
 
 .fa-linkedin {
-  background: #007bb5;
+  background: #3681B8;
   color: white;
 }
 
+h3 .fas {
+  padding-right: 5px;
+}
+
+.social-hr {
+  width: 100%;
+  margin-top: 30px;
+}
