--- a/style.css
+++ b/style.css
@@ -251,9 +251,9 @@ hr {
 }
 
 .job-title-section {
-  grid-area: title;
   align-items: center;
   display: grid;
+  grid-area: title;
 }
 
 .job-title {
@@ -261,9 +261,9 @@ hr {
 }
 
 .job-location {
-  display: flex;
   align-items: center;
   align-self: flex-start;
+  display: flex;
 }
 
 .pin {
@@ -279,6 +279,7 @@ hr {
 
 .preview:hover {
   color: #48A3F3;
+  cursor: pointer;
   font-weight: 600;
 }
 
@@ -333,6 +334,7 @@ hr {
 }
 
 .top-section {
+  border-top: 2px solid #E1E7EB;
   display: grid;
   grid-gap: 14px;
   padding: 30px 40px;
@@ -425,13 +427,14 @@ hr {
 }
 
 .graph-btn {
+  align-self: baseline;
   border-radius: 25px;
   border: 3px solid #6d799342;
   color: #5B6677;
   font-size: .8rem;
   font-weight: bold;
   letter-spacing: .5px;
-  margin: auto;
+  margin: 12px auto;
   padding: 10px 15px;
   background-color: #fff;
 }
@@ -448,6 +451,7 @@ hr {
   background-color: #48A3F3;
   border: 3px double white;
   color: white;
+  cursor: pointer;
 }
 
 .graph-btn:hover .w{
@@ -548,10 +552,10 @@ hr {
 }
 
 .hiring-lead {
-  height: 40px;
   border-radius: 50%;
-  vertical-align: middle;
+  height: 40px;
   margin-right: 15px;
+  vertical-align: middle;
 }
 
 .job-paragraph {
@@ -592,15 +596,15 @@ hr {
 }
 
 .fb-btn {
-  background-color: #5070BB;
+  background-color: #4B72C2;
 }
 
 .tweet-btn {
-  background-color: #48A9E9;
+  background-color: #00ABEF;
 }
 
 .linkedin-btn {
-  background-color: #3681B8;
+  background-color: #0582BD;
 }
 
 .social-inputs {
@@ -623,8 +627,8 @@ hr {
 }
 
 .text-field {
-  flex: 1;
   border-radius: 4px 0 0 4px;
+  flex: 1;
 }
 
 .text-field-last {
@@ -654,8 +658,8 @@ hr {
 }
 
 h2 .fas {
-  padding-right: 5px;
   color: #5B6677;
+  padding-right: 5px;
 }
 
 .social-hr {
@@ -737,11 +741,6 @@ h2 .fas {
 
   .bar-graph {
     height: 28vw;
-  } 
-
-  .graph-btn {
-    align-self: baseline;
-    margin: 12px auto;
   }
 
   .bottom-section {
@@ -754,8 +753,8 @@ h2 .fas {
   }
 
   .hiring {
-  display: flex;
   align-items: center;
+  display: flex;
 }
 
   .social-box {
@@ -829,8 +828,8 @@ h2 .fas {
 
 @media screen and (max-width: 608px) {
   .job-item {
-    display: flex;
     align-items: center; 
+    display: flex;
   }
 
   .description,
@@ -846,8 +845,8 @@ h2 .fas {
 
 @media screen and (max-width: 490px) {
   .header {
-    padding: 15px 20px 0;
     grid-template-columns: 200px 1fr;
+    padding: 15px 20px 0;
   }
 
   .top-section {
